--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DFL - Cardápio Oficial</title>  <!-- CSS principal (tema escuro BOOT). O v=3 força recarregar sem cache -->  <link rel="stylesheet" href="style.css?v=3" />  <!-- CSS mínimo complementar (somente o que é novo nesta versão) -->  <style>
-    /* Faixa compacta de horários abaixo do header */
+  <title>🍔 DFL - Cardápio Oficial</title>  <!-- CSS principal (tema escuro BOOT). O v=4 força recarregar sem cache -->  <link rel="stylesheet" href="style.css?v=4" />  <!-- CSS mínimo complementar (somente os blocos novos/ajustados) -->  <style>
+    /* Faixa compacta de horários (logo abaixo do header) */
     .hours-banner{display:flex;gap:12px;flex-wrap:wrap;align-items:center;justify-content:center;background:rgba(27,28,31,.85);color:#f5f5f7;border:1px solid #2a2d34;border-radius:10px;padding:8px 12px;margin:10px 0 18px}
     .hours-banner b{color:#ffcc00}
     .hours-banner .sep{opacity:.6}
@@ -19,15 +19,24 @@
     .carousel .c-prev{left:10px}
     .carousel .c-next{right:10px}
 
-    /* Faixa amarela FIXA (sticky) logo abaixo do cabeçalho */
-    .countdown-sticky{position:sticky;top:0;z-index:40;background:#ffcc00;color:#111;text-align:center;font-weight:800;border-radius:12px;padding:12px 10px;margin:16px 0 0;font-size:clamp(18px,2.6vw,22px);animation:pulse 2s infinite}
-    @keyframes pulse{0%{filter:brightness(100%)}50%{filter:brightness(120%)}100%{filter:brightness(100%)}}
+    /* Faixa amarela FIXA (sticky) logo abaixo do cabeçalho — tom escurecido */
+    .countdown-sticky{position:sticky;top:0;z-index:40;background:#E6B800;color:#111;text-align:center;font-weight:800;border-radius:12px;padding:12px 10px;margin:16px 0 0;font-size:clamp(18px,2.6vw,22px);animation:pulse 2s infinite}
+    @keyframes pulse{0%{filter:brightness(100%)}50%{filter:brightness(118%)}100%{filter:brightness(100%)}}
 
-    /* Garantia de espaçamento das seções (caso CSS principal falhe) */
+    /* Garantia de espaçamento das seções (fallback) */
     .section{margin:24px 0}
 
-    /* Botão WhatsApp flutuante (fallback leve) */
-    .wa-fab{position:fixed;right:16px;bottom:16px;background:#25d366;color:#fff;border-radius:999px;padding:14px 18px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.35);z-index:99;text-decoration:none}
+    /* FABs (botões flutuantes) — pilha vertical canto inferior direito */
+    .fab{position:fixed;right:16px;width:48px;height:48px;border-radius:999px;display:grid;place-items:center;color:#111;font-size:22px;box-shadow:0 8px 24px rgba(0,0,0,.35);z-index:99;text-decoration:none}
+    .fab--wa{bottom:16px;background:#25d366;color:#fff}
+    .fab--ig{bottom:72px;background:#ffcc00;color:#111}
+    .fab--ifood{bottom:128px;background:#EA1D2C;color:#fff}
+    .fab:hover{filter:brightness(1.05)}
+
+    /* Mobile: reduz um pouco a faixa sticky para não cobrir títulos */
+    @media (max-width:520px){
+      .countdown-sticky{padding:10px 8px;font-size:clamp(16px,4.5vw,20px)}
+    }
   </style></head>
 <body>
   <div class="container">
@@ -74,7 +83,7 @@
 
   <!-- Faixa amarela FIXA (sticky) abaixo do cabeçalho -->
   <div class="countdown-sticky" id="dailyCountdown">
-    🚨 Promoções acabam hoje! <span style="opacity:.8">TERMINA EM</span> <span id="timer">00:00:00</span>
+    🚨 Promoções acabam hoje! <span style="opacity:.85">TERMINA EM</span> <span id="timer">00:00:00</span>
   </div>
 </section>
 
@@ -129,17 +138,19 @@
   </div>
 </section>
 
-<!-- Rodapé / Endereço -->
+<!-- Rodapé / Endereço e links oficiais -->
 <footer class="footer section">
   <h2>Onde estamos</h2>
   <p>Patos de Minas — Atendimento delivery e retirada.</p>
   <p><a href="https://maps.google.com/?q=Da%20Fam%C3%ADlia%20Lanches%20Patos%20de%20Minas" target="_blank" rel="noopener">Abrir no Google Maps</a></p>
-  <p>© 2025 Da Família Lanches — Você faz parte disso!</p>
+  <p style="margin-top:8px">📸 Siga a gente no <a href="https://instagram.com/dafamilia_patos" target="_blank" rel="noopener">@dafamilia_patos</a></p>
+  <p>🛒 Peça também pelo <a href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8?UTM_Medium=share" target="_blank" rel="noopener">iFood</a> • 💬 Ou direto no <a href="https://wa.me/5534997178336?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido!" target="_blank" rel="noopener">WhatsApp</a></p>
+  <p style="margin-top:6px">© 2025 Da Família Lanches — Você faz parte disso!</p>
 </footer>
 
-  </div>  <!-- Botão flutuante WhatsApp --><a class="wa-fab" href="https://wa.me/5534997178336?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido!" target="_blank" rel="noopener" aria-label="Fazer pedido no WhatsApp">💬 Pedir no WhatsApp</a>
+  </div>  <!-- FABs (somente ícones) --><a class="fab fab--ifood" href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8?UTM_Medium=share" target="_blank" rel="noopener" aria-label="Pedir pelo iFood">🛒</a> <a class="fab fab--ig" href="https://instagram.com/dafamilia_patos" target="_blank" rel="noopener" aria-label="Abrir Instagram">📸</a> <a class="fab fab--wa" href="https://wa.me/5534997178336?text=Ol%C3%A1%2C%20quero%20fazer%20um%20pedido!" target="_blank" rel="noopener" aria-label="Fazer pedido no WhatsApp">💬</a>
 
-  <!-- JS EMBUTIDO (refinado: setas sutis e clique seguro) -->  <script>
+  <!-- JS EMBUTIDO (carrossel + contador refinados) -->  <script>
     // Contagem regressiva diária até 23:59:59 (reset a cada dia)
     (function(){
       const el = document.getElementById('timer');
@@ -161,7 +172,8 @@
       const slides=[...document.querySelectorAll('.slide')];
       const prev=document.querySelector('.c-prev');
       const next=document.querySelector('.c-next');
-      if(!slides.length||!prev||!next) return;
+      const box=document.getElementById('promoCarousel');
+      if(!slides.length||!prev||!next||!box) return;
       let i=slides.findIndex(s=>s.classList.contains('active')); if(i<0) i=0;
 
       function show(n){
@@ -182,10 +194,9 @@
         const wa=s.dataset.wa; if(wa) window.open(wa,'_blank');
       }));
 
-      // Suporte a gesto (mobile)
+      // Gesto (mobile)
       let x0=null; const ts=e=>x0=(e.touches?e.touches[0].clientX:e.clientX),
           te=e=>{ if(x0===null) return; const x1=(e.changedTouches?e.changedTouches[0].clientX:e.clientX); const dx=x1-x0; if(Math.abs(dx)>40) go(dx<0?1:-1); x0=null; };
-      const box=document.getElementById('promoCarousel');
       box.addEventListener('touchstart',ts); box.addEventListener('touchend',te);
 
       show(i);
