Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 <section class="section" id="tradicionais">
   <h2>Hambúrgueres Tradicionais</h2>
   <div class="grid" style="margin-top:10px">
-    <div class="card"><strong>BÃO</strong><div class="price">R$ 11,00</div><div class="desc">Pão, hambúrguer, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>UAI</strong><div class="price">R$ 13,00</div><div class="desc">Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>TREM</strong><div class="price">R$ 14,00</div><div class="desc">Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela</div></div>
-    <div class="card"><strong>CADIM</strong><div class="price">R$ 17,00</div><div class="desc">Pão, hambúrguer, filé frango, bacon, milho, batata palha e mussarela</div></div>
-    <div class="card"><strong>ARMARIA</strong><div class="price">R$ 18,00</div><div class="desc">Pão, 1 hambúrguer, 1 filé frango, bacon, milho, batata palha e mussarela</div></div>
-    <div class="card"><strong>BITELA</strong><div class="price">R$ 22,00</div><div class="desc">Pão, 2 hambúrgueres, filé frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela</div></div>
-    <div class="card"><strong>APRUMA</strong><div class="price">R$ 25,00</div><div class="desc">Pão, 2 hambúrgueres artesanais, filé frango, bacon, milho, batata palha e cheddar</div></div>
+    <div class="card"><strong>BÃO</strong><div class="price">R$ 11,00</div><div class="desc">Pão, alface, tomate, hambúrguer, presunto e mussarela.</div></div>
+    <div class="card"><strong>UAI</strong><div class="price">R$ 13,00</div><div class="desc">Pão, alface, tomate, milho, bacon, hambúrguer, presunto e mussarela.</div></div>
+    <div class="card"><strong>TREM</strong><div class="price">R$ 14,00</div><div class="desc">Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, presunto e mussarela.</div></div>
+    <div class="card"><strong>CADIM</strong><div class="price">R$ 17,00</div><div class="desc">Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, presunto e mussarela.</div></div>
+    <div class="card"><strong>ARMARIA</strong><div class="price">R$ 18,00</div><div class="desc">Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, batata palha, presunto e mussarela.</div></div>
+    <div class="card"><strong>BITELA</strong><div class="price">R$ 22,00</div><div class="desc">Pão, alface, tomate, milho, bacon, salsicha, 2 hambúrgueres, filé de frango, batata palha, presunto e mussarela.</div></div>
+    <div class="card"><strong>APRUMA</strong><div class="price">R$ 25,00</div><div class="desc">Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, batata palha, presunto e mussarela.</div></div>
   </div>
 </section>
 
@@ -120,9 +120,9 @@
 <section class="section" id="artesanais">
   <h2>Hambúrgueres Artesanais</h2>
   <div class="grid" style="margin-top:10px">
-    <div class="card"><strong>PELEJA</strong><div class="price">R$ 26,00</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, hambúrguer artesanal 120g, filé frango, presunto e mussarela</div></div>
-    <div class="card"><strong>TUDIBOM</strong><div class="price">R$ 28,50</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, presunto e mussarela</div></div>
-    <div class="card"><strong>CUSTOSO</strong><div class="price">R$ 31,00</div><div class="desc">Pão, alface, tomate, milho, bacon, batata palha, 2 hambúrgueres artesanais 120g, filé frango, cheddar cremoso e presunto</div></div>
+    <div class="card"><strong>PELEJA</strong><div class="price">R$ 26,00</div><div class="desc">Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela.</div></div>
+    <div class="card"><strong>TUDIBOM</strong><div class="price">R$ 28,50</div><div class="desc">Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela.</div></div>
+    <div class="card"><strong>CUSTOSO</strong><div class="price">R$ 31,00</div><div class="desc">Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso, presunto e 2 fatias de mussarela.</div></div>
   </div>
 </section>
 
