--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- Carrinho fixo (contador) -->
+  <!-- Carrinho fixo -->
   <button id="cart-icon" aria-label="Abrir carrinho">
     🛒 <span id="cart-count">0</span>
   </button>
@@ -24,7 +24,10 @@
     </div>
   </header>
 
-  <!-- Horários (compacto) -->
+  <!-- Status de funcionamento -->
+  <div id="status-banner" class="status-banner">Carregando horário...</div>
+
+  <!-- Horário fixo da semana -->
   <div class="hours-banner">
     <span>🕒 Seg–Qui <b>18h–23h15</b></span> •
     <span>Sex–Dom <b>17h30–23h30</b></span> •
@@ -41,23 +44,17 @@
     </div>
 
     <div class="carousel" id="promoCarousel">
-      <button class="c-btn c-prev" aria-label="Anterior">◀</button>
+      <button class="c-btn c-prev">◀</button>
       <div class="slides">
         <img class="slide active" src="promo1.jpg" alt="Promo 1" data-wa="Quero a promoção 1" />
         <img class="slide" src="promo2.jpg" alt="Promo 2" data-wa="Quero a promoção 2" />
         <img class="slide" src="promo3.jpg" alt="Promo 3" data-wa="Quero a promoção 3" />
-        <img class="slide" src="promo4.jpg" alt="Promo 4" data-wa="Quero a promoção 4" />
-        <img class="slide" src="promo5.jpg" alt="Promo 5" data-wa="Quero a promoção 5" />
-        <img class="slide" src="promo6.jpg" alt="Promo 6" data-wa="Quero a promoção 6" />
-        <img class="slide" src="promo7.jpg" alt="Promo 7" data-wa="Quero a promoção 7" />
-        <img class="slide" src="promo8.jpg" alt="Promo 8" data-wa="Quero a promoção 8" />
-        <img class="slide" src="promo9.jpg" alt="Promo 9" data-wa="Quero a promoção 9" />
       </div>
-      <button class="c-btn c-next" aria-label="Próxima">▶</button>
+      <button class="c-btn c-next">▶</button>
     </div>
   </section>
 
-  <!-- Tradicionais -->
+  <!-- Hambúrgueres Tradicionais -->
   <section class="menu-section">
     <h2>Hambúrgueres Tradicionais</h2>
     <div class="grid">
@@ -66,40 +63,14 @@
         <p>Pão, alface, tomate, hambúrguer, presunto e mussarela.</p>
         <button class="add-cart">Adicionar</button>
       </article>
-
       <article class="card" data-id="UAI" data-name="UAI" data-price="13.00">
         <h3>UAI</h3><div class="price">R$ 13,00</div>
         <p>Pão, alface, tomate, milho, bacon, hambúrguer, presunto e mussarela.</p>
         <button class="add-cart">Adicionar</button>
       </article>
-
       <article class="card" data-id="TREM" data-name="TREM" data-price="14.00">
         <h3>TREM</h3><div class="price">R$ 14,00</div>
         <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="CADIM" data-name="CADIM" data-price="17.00">
-        <h3>CADIM</h3><div class="price">R$ 17,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="ARMARIA" data-name="ARMARIA" data-price="18.00">
-        <h3>ARMARIA</h3><div class="price">R$ 18,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, hambúrguer, filé de frango, batata palha, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="BITELA" data-name="BITELA" data-price="22.00">
-        <h3>BITELA</h3><div class="price">R$ 22,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 2 hambúrgueres, filé de frango, batata palha, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="APRUMA" data-name="APRUMA" data-price="25.00">
-        <h3>APRUMA</h3><div class="price">R$ 25,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, batata palha, presunto e mussarela.</p>
         <button class="add-cart">Adicionar</button>
       </article>
     </div>
@@ -109,63 +80,14 @@
   <section class="menu-section">
     <h2>Hambúrgueres Artesanais</h2>
     <div class="grid">
-      <article class="card" data-id="GRADICIDO" data-name="GRADICIDO" data-price="28.00">
-        <h3>GRADICIDO</h3><div class="price">R$ 28,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 3 hambúrgueres, filé de frango, ovo, batata palha, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="VARADIFOME" data-name="VARADIFOME" data-price="30.00">
-        <h3>VARADIFOME</h3><div class="price">R$ 30,00</div>
-        <p>Pão, alface, tomate, milho, bacon, salsicha, 4 hambúrgueres, filé de frango, ovo, batata palha, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="PELEJA" data-name="PELEJA" data-price="26.00">
-        <h3>PELEJA</h3><div class="price">R$ 26,00</div>
-        <p>Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
       <article class="card" data-id="TUDIBOM" data-name="TUDIBOM" data-price="28.50">
         <h3>TUDIBOM</h3><div class="price">R$ 28,50</div>
         <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, presunto e mussarela.</p>
         <button class="add-cart">Adicionar</button>
       </article>
-
-      <article class="card" data-id="CUSTOSO" data-name="CUSTOSO" data-price="31.00">
-        <h3>CUSTOSO</h3><div class="price">R$ 31,00</div>
-        <p>Pão, alface, tomate, milho, bacon, 2 hambúrgueres artesanais 120g, filé de frango, cheddar cremoso, presunto e mussarela.</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-    </div>
-  </section>
-
-  <!-- Combos -->
-  <section class="menu-section">
-    <h2>Combos</h2>
-    <div class="grid">
-      <article class="card" data-id="CC_TRAD" data-name="Combo Casal (Tradicional)" data-price="34.99">
-        <h3>Combo Casal (Tradicional)</h3><div class="price">R$ 34,99</div>
-        <p>2 Hambúrguer Trem + 1 Fanta 1L</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="CF_TRAD" data-name="Combo Família (Tradicional)" data-price="59.99">
-        <h3>Combo Família (Tradicional)</h3><div class="price">R$ 59,99</div>
-        <p>4 Hambúrguer Trem + 1 Kuat 2L</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="CC_ART" data-name="Combo Casal (Artesanal)" data-price="54.99">
-        <h3>Combo Casal (Artesanal)</h3><div class="price">R$ 54,99</div>
-        <p>2 Hambúrguer Peleja + 1 Coca 1L</p>
-        <button class="add-cart">Adicionar</button>
-      </article>
-
-      <article class="card" data-id="CF_ART" data-name="Combo Família (Artesanal)" data-price="79.99">
-        <h3>Combo Família (Artesanal)</h3><div class="price">R$ 79,99</div>
-        <p>4 Hambúrguer Peleja + 1 Coca 2L</p>
+      <article class="card" data-id="PELEJA" data-name="PELEJA" data-price="26.00">
+        <h3>PELEJA</h3><div class="price">R$ 26,00</div>
+        <p>Pão, alface, tomate, milho, bacon, hambúrguer artesanal 120g, filé de frango, presunto e mussarela.</p>
         <button class="add-cart">Adicionar</button>
       </article>
     </div>
@@ -175,17 +97,12 @@
   <section class="menu-section">
     <h2>Bebidas & Refrigerantes</h2>
     <div class="grid">
-      <article class="card" data-id="coca200" data-name="Coca-Cola 200ml" data-price="4.00"><h3>Coca-Cola 200ml</h3><div class="price">R$ 4,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="aguaG" data-name="Água com Gás" data-price="4.00"><h3>Água com Gás</h3><div class="price">R$ 4,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="uva450" data-name="Dell-Valle Uva 450ml" data-price="5.00"><h3>Dell-Valle Uva 450ml</h3><div class="price">R$ 5,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="laranja450" data-name="Dell-Valle Laranja 450ml" data-price="5.00"><h3>Dell-Valle Laranja 450ml</h3><div class="price">R$ 5,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="coca310" data-name="Coca-Cola 310ml" data-price="5.00"><h3>Coca-Cola 310ml</h3><div class="price">R$ 5,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="coca310zero" data-name="Coca-Cola 310ml Zero" data-price="5.00"><h3>Coca-Cola 310ml Zero</h3><div class="price">R$ 5,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="fanta1l" data-name="Fanta Laranja 1L" data-price="8.00"><h3>Fanta Laranja 1L</h3><div class="price">R$ 8,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="coca1l" data-name="Coca-Cola 1L" data-price="9.00"><h3>Coca-Cola 1L</h3><div class="price">R$ 9,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="coca1lzero" data-name="Coca-Cola 1L Zero" data-price="9.00"><h3>Coca-Cola 1L Zero</h3><div class="price">R$ 9,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="kuat2l" data-name="Kuat Guaraná 2L" data-price="10.00"><h3>Kuat Guaraná 2L</h3><div class="price">R$ 10,00</div><button class="add-cart">Adicionar</button></article>
-      <article class="card" data-id="coca2l" data-name="Coca-Cola 2L" data-price="13.00"><h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div><button class="add-cart">Adicionar</button></article>
+      <article class="card" data-id="coca1l" data-name="Coca-Cola 1L" data-price="9.00">
+        <h3>Coca-Cola 1L</h3><div class="price">R$ 9,00</div><button class="add-cart">Adicionar</button>
+      </article>
+      <article class="card" data-id="coca2l" data-name="Coca-Cola 2L" data-price="13.00">
+        <h3>Coca-Cola 2L</h3><div class="price">R$ 13,00</div><button class="add-cart">Adicionar</button>
+      </article>
     </div>
   </section>
 
@@ -193,21 +110,23 @@
   <footer class="footer">
     <h2>Onde estamos</h2>
     <p>Patos de Minas — Atendimento delivery e retirada.</p>
-    <a class="map-link" href="https://maps.app.goo.gl/jQ1cYcmuZm8rU5Dk9" target="_blank" rel="noopener">Abrir no Google Maps</a>
-    <p class="social-line">📸 Siga <a href="https://www.instagram.com/dafamilia_patos" target="_blank">@dafamilia_patos</a> · 🛒 Peça também no <a href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8" target="_blank">iFood</a> · 💬 ou direto no <a href="https://wa.me/5534997178336" target="_blank">WhatsApp</a></p>
-    <p class="copy">© 2025 Da Família Lanches — Você faz parte disso!</p>
+    <p>
+      📍 <a href="https://maps.google.com/?q=Da%20Fam%C3%ADlia%20Lanches%20Patos%20de%20Minas" target="_blank">Abrir no Google Maps</a>
+    </p>
+    <p>📸 <a href="https://instagram.com/dafamilia_patos" target="_blank">@dafamilia_patos</a> • 🛒 <a href="https://www.ifood.com.br/delivery/patos-de-minas-mg/da-familia-lanches-caramuru/9aadff75-b014-4e7f-a9b4-b3e478e38af8" target="_blank">iFood</a></p>
+    <p>💬 <a href="https://wa.me/5534997178336" target="_blank">Fale no WhatsApp</a></p>
   </footer>
 
-  <!-- Mini-carrinho (popup flutuante) -->
+  <!-- Mini Carrinho -->
   <div id="cart-backdrop"></div>
   <aside id="mini-cart" aria-hidden="true">
     <header class="mini-head">
       <h3>Seu Pedido</h3>
-      <button class="mini-close" aria-label="Fechar">✕</button>
+      <button class="mini-close">✕</button>
     </header>
-    <div id="mini-list" class="mini-list"><!-- itens via JS --></div>
+    <div id="mini-list" class="mini-list"></div>
     <footer class="mini-foot">
-      <button id="mini-clear" class="btn-secondary">Limpar carrinho</button>
+      <button id="mini-clear" class="btn-secondary">Limpar</button>
       <button id="mini-checkout" class="btn-primary">Fechar pedido</button>
     </footer>
   </aside>
